--- a/frontend/src/Styles/app.scss
+++ b/frontend/src/Styles/app.scss
@@ -1,3 +1,12 @@
+.header-container {
+    background-color: black;
+    color: white;
+    padding: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
