--- a/frontend/src/Styles/app.scss
+++ b/frontend/src/Styles/app.scss
@@ -1,3 +1,10 @@
+@mixin base-button {
+    padding: 10px;
+    margin: 10px;
+    border: none;
+    border-radius: 4px;
+}
+
 .header-container {
     background-color: black;
     color: white;
@@ -5,6 +12,28 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+}
+
+.tasklist-container {
+    background-color: #e1e2ea;
+    padding: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.tasklist-order-button {
+    @include base-button();
+    color: white;
+    background-color: black;
+}
+
+.tasklist-order-button:hover {
+    background-color: #3a3a42;
+}
+
+.tasklist-order-button:active {
+    background-color: red;
 }
 
 body {
