--- a/frontend/src/Styles/app.scss
+++ b/frontend/src/Styles/app.scss
@@ -5,39 +5,13 @@
     border-radius: 4px;
 }
 
-.header-container {
-    background-color: black;
-    color: white;
-    padding: 20px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.tasklist-container {
-    background-color: #e1e2ea;
-    padding: 10px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.tasklist-order-button {
-    @include base-button();
-    color: white;
-    background-color: black;
-}
-
-.tasklist-order-button:hover {
-    background-color: #3a3a42;
-}
-
-.tasklist-order-button:active {
-    background-color: red;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
         sans-serif;
@@ -48,4 +22,35 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', 
         monospace;
+}
+
+.header-container {
+    background-color: black;
+    color: white;
+    padding: 60px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.tasklist-container {
+    background-color: #e1e2ea;
+    padding: 30px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.tasklist-menu-button {
+    &:hover {
+        background-color: #3a3a42;
+    }
+
+    &:active {
+        background-color: red;
+    }
+
+    @include base-button();
+    color: white;
+    background-color: black;
 }
