--- a/frontend/src/Styles/app.scss
+++ b/frontend/src/Styles/app.scss
@@ -11,6 +11,10 @@
     box-sizing: border-box;
 }
 
+body, html {
+    height: 100%;
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -33,7 +37,7 @@ code {
     align-items: center;
 }
 
-.tasklist-container {
+.tasklist-menu-container {
     background-color: #e1e2ea;
     padding: 30px;
     display: flex;
@@ -53,4 +57,35 @@ code {
     @include base-button();
     color: white;
     background-color: black;
+}
+
+.tasklist-items-container {
+    margin: 80px auto;
+    padding: 20px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fill, 40%);
+    align-items: center;
+    gap: 50px;
+}
+
+.task-container {
+    margin: auto;
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+    overflow-wrap: break-word;
+    background-color: #e1e2ea;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+    border-left: 5px solid var(--accent-color);
+}
+
+.footer-container {
+    background-color: black;
+    color:white;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
