--- a/frontend/src/Styles/app.scss
+++ b/frontend/src/Styles/app.scss
@@ -78,7 +78,8 @@ code {
     overflow-wrap: break-word;
     background-color: #e1e2ea;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
-    border-left: 5px solid var(--accent-color);
+    border-top: 8px solid var(--accent-color);
+    border-radius: 8px;
 }
 
 .footer-container {
