--- a/frontend/src/Styles/app.scss
+++ b/frontend/src/Styles/app.scss
@@ -43,6 +43,7 @@ code {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
 }
 
 .tasklist-menu-button {
