--- a/frontend/src/Styles/app.scss
+++ b/frontend/src/Styles/app.scss
@@ -1,8 +1,16 @@
+$header-padding: 60px;
+
 @mixin base-button {
     padding: 10px;
     margin: 10px;
     border: none;
     border-radius: 4px;
+}
+
+@mixin task-box {
+    background-color: #e1e2ea;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
 }
 
 * {
@@ -31,7 +39,7 @@ code {
 .header-container {
     background-color: black;
     color: white;
-    padding: 60px;
+    padding: $header-padding;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -72,15 +80,13 @@ code {
 }
 
 .task-container {
+    @include task-box();
     margin: auto;
     padding: 20px;
     width: 100%;
     height: 100%;
     overflow-wrap: break-word;
-    background-color: #e1e2ea;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
     border-top: 8px solid var(--accent-color);
-    border-radius: 8px;
 }
 
 .footer-container {
@@ -90,4 +96,39 @@ code {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.modal-container {
+    background-color: hsla(0, 0%, 0%, 0.2);
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -$header-padding * 2 - 42px;
+    height: 100%;
+    width: 100%;
+}
+
+.modal-form {
+    @include task-box();
+    left: auto;
+    right: auto;
+    padding: 40px;
+    border: none;
+}
+
+.modal-button {
+    @include base-button();
+
+    &:hover {
+        background-color: #3a3a42;
+    }
+
+    &:active {
+        background-color: red;
+    }
+
+    @include base-button();
+    color: white;
+    background-color: black;
 }
