--- a/frontend/src/Styles/app.scss
+++ b/frontend/src/Styles/app.scss
@@ -31,9 +31,8 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', 
-        monospace;
+textarea {
+    resize: none;
 }
 
 .header-container {
