Disabled buttons based on task and category counts and added a button style for disabled buttons

--- a/frontend/src/Styles/app.scss
+++ b/frontend/src/Styles/app.scss
@@ -69,6 +69,10 @@ textarea {
         background-color: red;
     }
 
+    &:disabled {
+        background-color: #5f5f66;
+    }
+
     @include base-button();
     color: white;
     background-color: black;
