--- a/frontend/src/Styles/app.scss
+++ b/frontend/src/Styles/app.scss
@@ -2,7 +2,8 @@ $header-padding: 60px;
 
 @mixin base-button {
     padding: 10px;
-    margin: 10px;
+    margin-right: 20px;
+    margin-bottom: 20px;
     border: none;
     border-radius: 4px;
 }
@@ -33,6 +34,20 @@ body {
 
 textarea {
     resize: none;
+}
+
+input, textarea, select {
+    &[type=color] {
+        width: 40px;
+        height: 40px;
+    }
+    background-color: white;
+    border: 2px solid #b0b6b7;
+    color: #333535;
+    border-radius: 4px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    padding: 5px;
 }
 
 .header-container {
@@ -141,4 +156,8 @@ textarea {
     @include base-button();
     color: white;
     background-color: black;
+}
+
+.req-star {
+    color: red;
 }
