--- a/frontend/src/Styles/app.scss
+++ b/frontend/src/Styles/app.scss
@@ -2,8 +2,7 @@ $header-padding: 60px;
 
 @mixin base-button {
     padding: 10px;
-    margin-right: 20px;
-    margin-bottom: 20px;
+    margin: 10px 20px 20px 0px;
     border: none;
     border-radius: 4px;
 }
